Re-enable multi-rank PME tests (with the file race fixed in parent)
Also remove the MPI_Barrier call, which was the previous
attempt at fixing the issue.

Change-Id: I2deb6b77abe2b8719a8b4d50410e92427cbbbd85

--- a/src/programs/mdrun/tests/CMakeLists.txt
+++ b/src/programs/mdrun/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2013,2014,2015,2016,2017, by the GROMACS development team, led by
+# Copyright (c) 2013,2014,2015,2016,2017,2018, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -38,6 +38,8 @@ add_library(mdrun_test_objlib OBJECT
     mdruncomparisonfixture.cpp
     moduletest.cpp
     terminationhelper.cpp
+    # PME tests
+    pmetest.cpp
     )
 
 set(testname "MdrunTests")
@@ -56,8 +58,6 @@ gmx_add_gtest_executable(
     swapcoords.cpp
     interactiveMD.cpp
     termination.cpp
-    # PME tests; FIXME: move this back into mdrun_test_objlib above and figure out the MPI race issue
-    pmetest.cpp
     # pseudo-library for code for testing mdrun
     $<TARGET_OBJECTS:mdrun_test_objlib>
     # pseudo-library for code for mdrun
