MolDip changed to MolGen, and some more cleaning
Change-Id: I308a04da1fc1b545f90be7f9770487fff0261be0

--- a/src/programs/alexandria/CMakeLists.txt
+++ b/src/programs/alexandria/CMakeLists.txt
@@ -50,7 +50,7 @@ set(ALEXANDRIA_SOURCES
            getmdlogger.cpp
            merge_mp.cpp
            merge_pd.cpp
-           moldip.cpp
+           molgen.cpp
            molprop_check.cpp
            molprop_tables.cpp
            molprop_sqlite3.cpp
