[WIP] Transfer information from old how-to section
Transfer information from the old how-to section to the new website and
perform some updates/deletions where needed.

Refs #2359

Change-Id: I474f4161003f07f92ba23d8183ac058fec4dc17b

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -124,6 +124,11 @@ if (SPHINX_FOUND)
         dev-manual/tools.rst
         dev-manual/uncrustify.rst
         fragments/doxygen-links.rst
+        how-to/index.rst
+        how-to/beginners.rst
+        how-to/topology.rst
+        how-to/special.rst
+        how-to/visualize.rst
         install-guide/index.rst
         release-notes/index.rst
         release-notes/features.rst
