Split up trjconv
Work to split up trjconv into more manageable parts.

Change-Id: I0e7a761ecd1b425254fa027675b528c4e3c3b39e
Refs: #2115

--- a/src/gromacs/gmxana/tests/CMakeLists.txt
+++ b/src/gromacs/gmxana/tests/CMakeLists.txt
@@ -38,5 +38,6 @@ gmx_add_gtest_executable(
     ${exename}
     gmx_traj.cpp
     gmx_trjconv.cpp
+    gmx_trjpbc.cpp
     )
 gmx_register_gtest_test(GmxAnaTest ${exename} INTEGRATION_TEST)
