Teach include sorter to ignore cmake-test files
Change-Id: Ie08c0ab7a03fcd1016347f534b518ff51863da98

--- a/.gitattributes
+++ b/.gitattributes
@@ -27,6 +27,9 @@ cmake/ThreadMPI.cmake                   !filter
 cmake/*.c                               -filter -gmx-doxygen
 cmake/*.cpp                             -filter -gmx-doxygen
 cmake/*.c.cmakein                       !filter
+cmake/*.h                               !filter
+cmake/*.cu                              !filter
+cmake/*.cuh                             !filter
 cmake/FindCUDA/*.cmake                  !filter
 docs/doxygen/Doxyfile-*.cmakein         !filter
 docs/doxygen/*.cpp                      !filter
