--- a/src/gromacs/analysisdata/modules/CMakeLists.txt
+++ b/src/gromacs/analysisdata/modules/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2010,2013,2014, by the GROMACS development team, led by
+# Copyright (c) 2010,2013,2014,2018, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -35,7 +35,11 @@
 gmx_install_headers(
     average.h
     displacement.h
+    filehandler.h
+    framehandler.h
     histogram.h
     lifetime.h
     plot.h
+    settings.h
+    write.h
     )
