Add dedicated trajectory file converter
Added a new convert module to the trajectoryanalysis modules for
dedicated converting of trajectory formats into each other. This should
be the example case for converting other legacy modules as well.

Refs #2115, #2396

Change-Id: I9d8717c7a6a708f9bdd83e3a8cc478b5a8725be6

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -142,6 +142,7 @@ gmx_install_headers(
     random.h
     selection.h
     trajectoryanalysis.h
+    trajectorydata.h
     utility.h
     ${CMAKE_CURRENT_BINARY_DIR}/version.h
     )
