[RFC/WIP] Add dedicated trajectory file converter
Added a new convert module to the trajectoryanalysis modules for
dedicated converting of trajectory formats into each other. This could
be the example case for converting other legacy modules as well.

The new module builds on the adaption of the previous patch for using
the Variant class to store data in analysisdata.

Refs #2115, #2396

Change-Id: I9d8717c7a6a708f9bdd83e3a8cc478b5a8725be6

--- a/src/gromacs/analysisdata/modules/CMakeLists.txt
+++ b/src/gromacs/analysisdata/modules/CMakeLists.txt
@@ -35,7 +35,11 @@
 gmx_install_headers(
     average.h
     displacement.h
+    filehandler.h
+    framehandler.h
     histogram.h
     lifetime.h
     plot.h
+    settings.h
+    write.h
     )
