Enable FP exceptions in debug for all modules, not just mdrun
Mdrun now explicitly disables exceptions for TPI/group scheme,
and restores them at exit when doing so.

Change-Id: Ibfe16a86b0cc9dd1e1567ff6a625a9658bcb65ab

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -418,6 +418,8 @@ find_library(HAVE_LIBM m)
 mark_as_advanced(HAVE_LIBM)
 check_library_exists(rt clock_gettime "" HAVE_CLOCK_GETTIME)
 check_library_exists(m feenableexcept "" HAVE_FEENABLEEXCEPT)
+check_library_exists(m fedisableexcept "" HAVE_FEDISABLEEXCEPT)
+check_library_exists(m fegetexcept "" HAVE_FEGETEXCEPT)
 
 include(TestSchedAffinity)
 test_sched_affinity(HAVE_SCHED_AFFINITY)
