Added Full Correlation Analysis (FCA)
FCA of a trajectory follows the spirit of PCA in finding important modes of
motion through an orthonormal coordinate transformation and subsequent
sorting of basis vectors.
It has been developed inside the trajectoryanlysis framework.
Orignal code from Oliver Lange, then ported to gromacs4.6 by Christian Blau,
and current patch by Berenger Bramas.

Fixes #2005

Implementation according to:

Lange, Oliver F., and Helmut Grubmüller. "Full correlation analysis of conformational protein dynamics."
Proteins: Structure, Function, and Bioinformatics 70.4 (2008): 1294-1312.

Change-Id: Id9f8a59a82d9ae2d0ec2a49a19de7363d13c9a44

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -800,6 +800,8 @@ if(NOT GMX_OPENMP)
 else()
     set(GMX_EXE_LINKER_FLAGS ${GMX_EXE_LINKER_FLAGS} ${OpenMP_LINKER_FLAGS})
     set(GMX_SHARED_LINKER_FLAGS ${GMX_SHARED_LINKER_FLAGS} ${OpenMP_SHARED_LINKER_FLAGS})
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
 ########################################################################
