Added Full Correlation Analysis (FCA)
FCA of a trajectory follows the spirit of PCA in finding important modes of
motion through an orthonormal coordinate transformation and subsequent
sorting of basis vectors.
It has been developed inside the trajectoryanlysis framework.
Orignal code from Oliver Lange, then ported to gromacs4.6 by Christian Blau,
and current patch by Berenger Bramas.

Fixes #2005

Implementation according to:

Lange, Oliver F., and Helmut Grubmüller. "Full correlation analysis of conformational protein dynamics."
Proteins: Structure, Function, and Bioinformatics 70.4 (2008): 1294-1312.

Change-Id: Id9f8a59a82d9ae2d0ec2a49a19de7363d13c9a44

--- a/src/programs/CMakeLists.txt
+++ b/src/programs/CMakeLists.txt
@@ -36,6 +36,9 @@ file(GLOB MDRUN_SOURCES mdrun/*.cpp)
 # make an "object library" that we can re-use for multiple targets
 add_library(mdrun_objlib OBJECT ${MDRUN_SOURCES})
 
+file(GLOB FCA_SOURCES fca/*.cpp)
+add_library(fca_objlib OBJECT ${FCA_SOURCES})
+
 if(GMX_FAHCORE)
     # The lack of a real source file here alongside the object library
     # may break some generators, according to CMake documentation. If
@@ -58,7 +61,7 @@ elseif(GMX_BUILD_MDRUN_ONLY)
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/gmx-completion-${BINARY_NAME}.bash
             DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT runtime)
 else()
-    file(GLOB GMX_MAIN_SOURCES gmx.cpp legacymodules.cpp)
+    file(GLOB GMX_MAIN_SOURCES gmx.cpp legacymodules.cpp fca/*.cpp)
     if(GMX_X11)
         file(GLOB VIEW_SOURCES view/*.cpp)
     else()
@@ -118,5 +121,6 @@ else()
 
     if(BUILD_TESTING)
         add_subdirectory(mdrun/tests)
+        add_subdirectory(fca/tests)
     endif()
 endif()
