--- a/src/gromacs/math/CMakeLists.txt
+++ b/src/gromacs/math/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2013,2014,2015,2016,2017, by the GROMACS development team, led by
+# Copyright (c) 2013,2014,2015,2016,2017,2018, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -33,7 +33,8 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 file(GLOB MATH_SOURCES *.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${MATH_SOURCES} PARENT_SCOPE)
+file(GLOB FCA_SOURCES fca/*.cpp)
+set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${MATH_SOURCES} ${FCA_SOURCES} PARENT_SCOPE)
 
 gmx_install_headers(
     3dtransforms.h
