[RFC] Simple trajectory converter
Very simple test case for trajectory converter.

Aimed at having a test case that bypasses the analysisdata framework.

Refs #2115

Change-Id: Ie91d620c0ea25b7436f5745626b973ec97175d29

--- a/src/gromacs/trajectoryanalysis/tests/CMakeLists.txt
+++ b/src/gromacs/trajectoryanalysis/tests/CMakeLists.txt
@@ -36,6 +36,7 @@ gmx_add_unit_test(TrajectoryAnalysisUnitTests trajectoryanalysis-test
                   moduletest.cpp
                   clustsize.cpp
                   cmdlinerunner.cpp
+                  convert.cpp
                   angle.cpp
                   distance.cpp
                   freevolume.cpp
