Stop using custom FindOpenCL.cmake, per TODO
It was originally taken from cmake 3.1.0 and modified to produce
all-uppercase variable names (with OPENCL_ instead of OpenCL_),
so the surrounding cmake code is now changed to expect exact-case names.

Another (undocumented) modification was that it took into account
CUDA_HOME env.var. when searching for OpenCL, while standard cmake
only looks at seemingly less useful CUDA_PATH. This workaround
is preserved by appending ${CUDA_HOME} to CMAKE_PREFIX_PATH.

Change-Id: I5ca60f88e657b064fb6f98b268c2c48e10f00986

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -206,7 +206,7 @@ target_link_libraries(libgromacs
                       ${GMX_COMMON_LIBRARIES}
                       ${FFT_LIBRARIES} ${LINEAR_ALGEBRA_LIBRARIES}
                       ${LMFIT_LIBRARIES_TO_LINK}
-                      ${THREAD_LIB} ${GMX_SHARED_LINKER_FLAGS} ${OPENCL_LIBRARIES}
+                      ${THREAD_LIB} ${GMX_SHARED_LINKER_FLAGS} ${OpenCL_LIBRARIES}
                       ${GMX_STDLIB_LIBRARIES}
                       PUBLIC
                       ${GMX_PUBLIC_LIBRARIES}
