--- a/src/gromacs/gpu_utils/tests/CMakeLists.txt
+++ b/src/gromacs/gpu_utils/tests/CMakeLists.txt
@@ -93,5 +93,5 @@ if(GMX_USE_CUDA)
     target_link_libraries(gpu_utils-test gpu_utilstest_cuda)
 endif()
 if(GMX_USE_OPENCL)
-    target_link_libraries(gpu_utils-test ${OPENCL_LIBRARIES})
+    target_link_libraries(gpu_utils-test ${OpenCL_LIBRARIES})
 endif()
