Prepare for GROMACS 2019 release notes
Since we want to add to these as part of the relevant commits, we need
some stub files and content now.

Change-Id: Ie318cb77a42be04e34cefe2585415faba9a53d5d

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -126,6 +126,14 @@ if (SPHINX_FOUND)
         fragments/doxygen-links.rst
         install-guide/index.rst
         release-notes/index.rst
+        release-notes/highlights.rst
+        release-notes/features.rst
+        release-notes/performance.rst
+        release-notes/tools.rst
+        release-notes/bugs-fixed.rst
+        release-notes/removed-features.rst
+        release-notes/portability.rst
+        release-notes/miscellaneous.rst
         release-notes/2018/2018.1.rst
         release-notes/2018/major/highlights.rst
         release-notes/2018/major/features.rst
