Introducing the Schedule Abstraction
The long term goal is to expose the non-bonded force calculations
of GROMACS outside of the program as a linkable library. As a first
step, this is an attempt to non-invasively abstract this capability.

In the future, the class described in forceschdule.h would have
more concrete extensions like SingleNodeGPUNBSchedule, or
TaskParallelismNBSSchedule, etc.

Change-Id: If0ece2a12e9c3ae2484d4bc8d4eba91213428b4b

--- a/src/programs/CMakeLists.txt
+++ b/src/programs/CMakeLists.txt
@@ -34,7 +34,7 @@
 
 file(GLOB MDRUN_SOURCES mdrun/*.cpp)
 # make an "object library" that we can re-use for multiple targets
-add_library(mdrun_objlib OBJECT ${MDRUN_SOURCES})
+add_library(mdrun_objlib OBJECT ${MDRUN_SOURCES} ../gromacs/mdtypes/forceschedule.h ../gromacs/mdtypes/forceschedule.cpp)
 
 if(GMX_FAHCORE)
     # The lack of a real source file here alongside the object library
@@ -43,7 +43,7 @@ if(GMX_FAHCORE)
     add_library(fahcore $<TARGET_OBJECTS:mdrun_objlib>)
     target_link_libraries(fahcore PRIVATE ${GMX_COMMON_LIBRARIES})
 elseif(GMX_BUILD_MDRUN_ONLY)
-    add_executable(mdrun $<TARGET_OBJECTS:mdrun_objlib> mdrun_main.cpp)
+    add_executable(mdrun $<TARGET_OBJECTS:mdrun_objlib> mdrun_main.cpp ../gromacs/mdtypes/forceschedule.h ../gromacs/mdtypes/forceschedule.cpp)
     target_link_libraries(mdrun libgromacs
         ${GMX_COMMON_LIBRARIES}
         ${GMX_EXE_LINKER_FLAGS}
