Updated infrastructure for comparing mdrun output in Google Tests
Made some GoogleMock matchers so its easy to check containers of reals
and rvecs.

Implemented better infrastructure for reading and comparing energies
and trajectories. In particular, the functionality for reading frames
and comparing them is now separated.

Added a new templated helper function for comparing either
energies or trajectories between pairs of frames that should match.

Removed use of std::pair, which didn't really help anything.

Reordered names of files in CMakeLists.txt, per intention to have
things alphabetical.

Added unordered_map to the set of C++ headers that the checker
understands, now that we use it.

Change-Id: If8d0bf076c07e7326473e613a83b46a6794f8505

--- a/src/programs/mdrun/tests/CMakeLists.txt
+++ b/src/programs/mdrun/tests/CMakeLists.txt
@@ -48,17 +48,19 @@ set(exename "mdrun-test")
 gmx_add_gtest_executable(
     ${exename}
     # files with code for tests
-    tabulated_bonded_interactions.cpp
+    compressed_x_output.cpp
+    energycomparison.cpp
     grompp.cpp
     initialconstraints.cpp
-    rerun.cpp
-    trajectory_writing.cpp
-    trajectoryreader.cpp
-    compressed_x_output.cpp
-    swapcoords.cpp
     interactiveMD.cpp
+    rerun.cpp
+    swapcoords.cpp
+    tabulated_bonded_interactions.cpp
     termination.cpp
     tpitest.cpp
+    trajectory_writing.cpp
+    trajectorycomparison.cpp
+    trajectoryreader.cpp
     # pseudo-library for code for testing mdrun
     $<TARGET_OBJECTS:mdrun_test_objlib>
     # pseudo-library for code for mdrun
@@ -72,10 +74,10 @@ set(exename "mdrun-mpi-test")
 gmx_add_gtest_executable(
     ${exename} MPI
     # files with code for tests
+    domain_decomposition.cpp
     multisim.cpp
     multisimtest.cpp
     replicaexchange.cpp
-    domain_decomposition.cpp
     # pseudo-library for code for testing mdrun
     $<TARGET_OBJECTS:mdrun_test_objlib>
     # pseudo-library for code for mdrun
