Fix GMX_BUILD_OWN_FFTW_URL CMake cache entry type
The type of the GMX_BUILD_OWN_FFTW_URL cache entry was set to "PATH"
and as a result CMake was expecting its content to be a directory.
This commit changes the type to "STRING" and as a result the '////'
workaround in the default fftw URL and custom URLs can now be passed on
the command line which previously did not work as CMake interpreted most
inputs as relative file system paths and converted them to absolute
ones.

Change-Id: I6ed3920d7816b686a031c1a3aee5acd25d7b4692

--- a/src/external/build-fftw/CMakeLists.txt
+++ b/src/external/build-fftw/CMakeLists.txt
@@ -94,9 +94,8 @@ endif()
 
 # Machinery for running the external project
 set(EXTERNAL_FFTW_VERSION 3.3.7)
-# cmake make eats slashes //// -> //
 set(GMX_BUILD_OWN_FFTW_URL
-    "http:////www.fftw.org/fftw-${EXTERNAL_FFTW_VERSION}.tar.gz" CACHE PATH
+    "http://www.fftw.org/fftw-${EXTERNAL_FFTW_VERSION}.tar.gz" CACHE STRING
     "URL from where to download fftw (use an absolute path when offline, adjust GMX_BUILD_OWN_FFTW_MD5 if downloading other version than ${EXTERNAL_FFTW_VERSION})")
 set(GMX_BUILD_OWN_FFTW_MD5 0d5915d7d39b3253c1cc05030d79ac47 CACHE STRING
     "Expected MD5 hash for the file at GMX_BUILD_OWN_FFTW_URL")
