Don't run hwloc detection if GMX_HWLOC=OFF
Change-Id: I70dbe9e40857680dc3987eb8b6820c5ccac96b63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -492,7 +492,9 @@ include(gmxManageSharedLibraries)
 if(DEFINED HWLOC_LIBRARIES)
   set(Hwloc_FIND_QUIETLY TRUE)
 endif()
-find_package(Hwloc 1.5)
+if ((DEFINED GMX_HWLOC AND GMX_HWLOC) OR NOT DEFINED GMX_HWLOC)
+    find_package(Hwloc 1.5)
+endif()
 if (HWLOC_FOUND)
     if (HWLOC_LIBRARIES MATCHES ".a$")
         set(_STATIC_HWLOC TRUE)
