Use trivalue option for GMX_HWLOC
Don't run hwloc detection if GMX_HWLOC=OFF. Separated the value of the
variable set by the user from the specification of the default
behaviour and the selected behaviour.

Change-Id: I70dbe9e40857680dc3987eb8b6820c5ccac96b63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -489,32 +489,37 @@ include(gmxManageSharedLibraries)
 #    set(XML_LIBRARIES ${LIBXML2_LIBRARIES})
 #endif()
 
-if(DEFINED HWLOC_LIBRARIES)
-  set(Hwloc_FIND_QUIETLY TRUE)
-endif()
-find_package(Hwloc 1.5)
-if (HWLOC_FOUND)
-    if (HWLOC_LIBRARIES MATCHES ".a$")
-        set(_STATIC_HWLOC TRUE)
-    endif()
+gmx_option_trivalue(
+    GMX_HWLOC
+    "Use hwloc portable hardware locality library"
+    "AUTO")
 
-    gmx_check_if_changed(HWLOC_FOUND_CHANGED HWLOC_FOUND)
-    if (_STATIC_HWLOC AND HWLOC_FOUND_CHANGED)
-        message(STATUS "Static hwloc library found, will not attempt using it as it could lead to link-time errors. To use the detected library, manually set GMX_HWLOC=ON and you will likely have to pass appropriate linker flags too to satisfy the link-time dependencies of your hwloc library. Try \"pkg-config --libs --static hwloc\" for suggestions on what you will need.")
-        set(GMX_HWLOC_DEFAULT OFF)
-    else()
-        set(GMX_HWLOC_DEFAULT ON)
+if (GMX_HWLOC)
+    # Find quietly the second time.
+    if(DEFINED HWLOC_LIBRARIES)
+        set(Hwloc_FIND_QUIETLY TRUE)
     endif()
-else()
-    set(GMX_HWLOC_DEFAULT OFF)
-endif()
-option(GMX_HWLOC "Add support for hwloc Portable Hardware locality library" ${GMX_HWLOC_DEFAULT})
-if(GMX_HWLOC)
-    if(HWLOC_FOUND)
-        include_directories(SYSTEM ${HWLOC_INCLUDE_DIRS})
-        list(APPEND GMX_EXTRA_LIBRARIES ${HWLOC_LIBRARIES})
-    else()
-        message(FATAL_ERROR "Hwloc package support requested, but not found.")
+    find_package(Hwloc 1.5)
+
+    if (HWLOC_FOUND)
+        if (HWLOC_LIBRARIES MATCHES ".a$")
+            set(_STATIC_HWLOC TRUE)
+        endif()
+
+        gmx_check_if_changed(HWLOC_FOUND_CHANGED HWLOC_FOUND)
+        if (_STATIC_HWLOC AND HWLOC_FOUND_CHANGED)
+            message(STATUS "Static hwloc library found, will not attempt using it as it could lead to link-time errors. To use the detected library, manually set GMX_HWLOC=ON and you will likely have to pass appropriate linker flags too to satisfy the link-time dependencies of your hwloc library. Try \"pkg-config --libs --static hwloc\" for suggestions on what you will need.")
+            set(GMX_USE_HWLOC OFF)
+        else()
+            set(GMX_USE_HWLOC ON)
+        endif()
+
+        if (GMX_USE_HWLOC)
+            include_directories(SYSTEM ${HWLOC_INCLUDE_DIRS})
+            list(APPEND GMX_EXTRA_LIBRARIES ${HWLOC_LIBRARIES})
+        endif()
+    elseif(GMX_HWLOC_FORCE)
+        message(FATAL_ERROR "Hwloc package support required, but not found.")
     endif()
 endif()
 
