--- a/src/gromacs/trajectoryanalysis/tests/CMakeLists.txt
+++ b/src/gromacs/trajectoryanalysis/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2010,2012,2013,2014,2015,2016,2017, by the GROMACS development team, led by
+# Copyright (c) 2010,2012,2013,2014,2015,2016,2017,2018, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -42,6 +42,7 @@ gmx_add_unit_test(TrajectoryAnalysisUnitTests trajectoryanalysis-test
                   pairdist.cpp
                   rdf.cpp
                   sasa.cpp
+                  scattering.cpp
                   select.cpp
                   surfacearea.cpp
                   trajectory.cpp
