[WIP] SAXS and SANS forward model and forces.
This is a first attemt at a generic module to implement both an
analysis tool that computes scattering profiles for SAXS and SANS based
on atomic structures as well as force providers to be used for data
driven MD.

Currently it only implements neutron scattering and that using a direct
Debye summation. Eventually it should have an implementation based on
either spherical harmonics or Zernike polynomials, since these are
much more computationally efficient

Change-Id: Ica54d080a19f02269cd5edac7218e7aa23206196

--- a/src/gromacs/applied-forces/CMakeLists.txt
+++ b/src/gromacs/applied-forces/CMakeLists.txt
@@ -36,6 +36,8 @@ gmx_add_libgromacs_sources(
     electricfield.cpp
     )
 
+add_subdirectory(scattering)
+    
 if (BUILD_TESTING)
     add_subdirectory(tests)
 endif()
