[WIP] SAXS and SANS forward model and forces.
This is a first attemt at a generic module to implement both an
analysis tool that computes scattering profiles for SAXS and SANS based
on atomic structures as well as force providers to be used for data
driven MD.

Currently it only implements neutron scattering and that using a direct
Debye summation. Eventually it should have an implementation based on
either spherical harmonics or Zernike polynomials, since these are
much more computationally efficient

Change-Id: Ica54d080a19f02269cd5edac7218e7aa23206196

--- a/src/gromacs/trajectoryanalysis/tests/CMakeLists.txt
+++ b/src/gromacs/trajectoryanalysis/tests/CMakeLists.txt
@@ -42,6 +42,7 @@ gmx_add_unit_test(TrajectoryAnalysisUnitTests trajectoryanalysis-test
                   pairdist.cpp
                   rdf.cpp
                   sasa.cpp
+		  scattering.cpp
                   select.cpp
                   surfacearea.cpp
                   trajectory.cpp
