[WIP] Integrator reformulation
This commit showcases the planned integrator reformulation. It is based
around a modularization of all functionalities called in the integrator
loop, and the reinterpretation of the integrator loop as a list of
modules with a run function which is called repeatedly.

Its core is the definition of the Element interface, which is the base
class of all modules. It requires the implementation of a run() method,
which will be called at every time step of the integration. Additionally,
there is a setup and a teardown function, which are called once at the
beginning and the end of the loop. Any loop is itself an element, which
allows to nest loops.

In the current implementation, the elements have mostly been created by
copy-pasting relevant parts of the current do_md() function in logical
sub-modules. The biggest challenge is the localization of the data
previously living in the do_md() function and the Integrator object. For
the sake of the current demonstration, the local variables have been moved
to the DataManager class, where they live as public variables. The
DataManager object and the Integrator object are made available to all
elements at construction time. This is obviously only a temporary solution
until data has been either localized or saved to an extension of the
current state structure.

The current implementation uses this new approach to create a very simple
NVE integrator in the do_custom2() function in custom.cpp.

Change-Id: I2d54244cb92d7ad321d0c9184fe64fe8fbbbd4ad

--- a/src/gromacs/mdrun/CMakeLists.txt
+++ b/src/gromacs/mdrun/CMakeLists.txt
@@ -33,13 +33,23 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 gmx_add_libgromacs_sources(
+    custom.cpp
     integrator.cpp
     md.cpp
     minimize.cpp
     rerun.cpp
     runner.cpp
     tpi.cpp
-    )
+)
+
+
+file(GLOB CUSTOMINT_SOURCES customintegrator/*.cpp)
+gmx_add_libgromacs_sources(${CUSTOMINT_SOURCES} customintegrator/element.h customintegrator/loopelement.h)
+
+gmx_install_headers(
+        customintegrator/element.h
+        customintegrator/loopelement.h
+)
 
 if (BUILD_TESTING)
 # TODO import this from src/programs/mdrun/tests
